--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "sugarform",
   "version": "1.0.0",
   "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "repository": "https://github.com/sugarform-dev/sugarform.git",
   "author": "aspulse <aspulse.x@gmail.com>",
   "license": "MIT",
   "packageManager": "yarn@3.4.1",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
@@ -16,6 +19,9 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^3.18.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
@@ -27,5 +33,8 @@
     "@types/react": {
       "optional": true
     }
+  },
+  "scripts": {
+    "build": "rollup -c"
   }
 }
