--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "sugarform",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "files": [
+    "package.json",
+    "LICENSE",
+    "dist"
+  ],
   "repository": "https://github.com/sugarform-dev/sugarform.git",
   "author": "aspulse <aspulse.x@gmail.com>",
   "license": "MIT",
