--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.37",
+    "@swc/jest": "^0.2.24",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
@@ -23,6 +25,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.18.0",
