--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2015",
     "module": "ESNext",
     "outDir": "dist",
-    "rootDir": "./src",
+    "rootDir": "./",
 
     "jsx": "react",
     "sourceMap": true,
@@ -27,6 +27,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src", ".eslintrc.cjs", "rollup.config.mjs"],
+  "include": ["src", "tests", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.cjs"],
   "exclude": ["node_modules", "dist"]
 }
