--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,10 +14,10 @@ jobs:
           cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
-      - name: eslint
+      - name: Run ESLint
         uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          filter_mode: diff_context,
+          filter_mode: diff_context
           fail_on_error: true
