Fix PR Commenter

--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -68,12 +68,15 @@ jobs:
           cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
-      - name: Export Markdown
+      - name: Calculation
+        id: calc
         env:
           HEAD_RESULT: ${{ needs.build_head.outputs.result }}
           BASE_RESULT: ${{ needs.build_base.outputs.result }}
-        run: yarn ts-node ./misc/bundle-size-diff.ts diff $HEAD_RESULT $BASE_RESULT
+        run: echo "payload=$(yarn ts-node ./misc/bundle-size-diff.ts diff $HEAD_RESULT $BASE_RESULT)" >> "$GITHUB_OUTPUT"
       - name: Post Review Comment
-        uses: mshick/add-pr-comment@v2
+        uses: sammcj/rewritable-pr-comment@main
         with:
-          message-path: 'bundle-size/result.md'
+          message: ${{ steps.id.output.payload }}
+          github_token: ${{ secrets.ACTION_TOKEN }}
+          comment_identifier: 'bundle-size'
