--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           command: yarn ts-node ./misc/bundle-size-diff.ts diff
       - name: Post Review Comment
-        uses: sammcj/rewritable-pr-comment@main
+        uses: thollander/actions-comment-pull-request@v2
         with:
           message: ${{ steps.calc.outputs.stdout }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          comment_tag: 'bundle-size-diff'
