[chore] fix pr commenter/auto approve (#9)
* Fix PR Commenter

* Fix Command Result Output

* Fix Directly reference from env

* Test for bundle size summary

* Fix Missing ref

* Revert "Test for bundle size summary"

This reverts commit 5027606440b4ca93305a89ab9192f52e3d6a3f53.

* Change Comment Actions

* Revert "Revert "Test for bundle size summary""

This reverts commit a7bbb76c6bf7158f3760aa8ac88769e5f6ee2e03.

* Revert "Revert "Revert "Test for bundle size summary"""

This reverts commit 83b11cc61c4ed26d86e28c2f9a7a8bc2426d849f.

* Fix Auto-Approve Condition

--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.base_re }}
+          ref: ${{ github.base_ref }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -68,12 +68,16 @@ jobs:
           cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
-      - name: Export Markdown
+      - name: Calculation
+        id: calc
+        uses: gh640/command-result-action@v1
         env:
           HEAD_RESULT: ${{ needs.build_head.outputs.result }}
           BASE_RESULT: ${{ needs.build_base.outputs.result }}
-        run: yarn ts-node ./misc/bundle-size-diff.ts diff $HEAD_RESULT $BASE_RESULT
-      - name: Post Review Comment
-        uses: mshick/add-pr-comment@v2
         with:
-          message-path: 'bundle-size/result.md'
+          command: yarn ts-node ./misc/bundle-size-diff.ts diff
+      - name: Post Review Comment
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: ${{ steps.calc.outputs.stdout }}
+          comment_tag: 'bundle-size-diff'
