--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "noUncheckedIndexedAccess": true
   },
   "include": ["src", "tests", "misc", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.cjs"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "coverage"],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
