[chore] ci shared cache

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,11 +10,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Restore pr yarn cache
+        uses: actions/cache@v3
+        id: restore-yarn-cache
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
+      - name: Restore shared yarn cache
+        if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/restore@v3
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-shared
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Run ESLint
@@ -24,3 +35,4 @@ jobs:
           reporter: github-pr-review
           filter_mode: diff_context
           fail_on_error: true
+
