--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -11,11 +11,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Restore pr yarn cache
+        uses: actions/cache@v3
+        id: restore-yarn-cache
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
+      - name: Restore shared yarn cache
+        if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/restore@v3
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-shared
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Build
@@ -34,13 +45,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Restore pr yarn cache
+        uses: actions/cache@v3
+        id: restore-yarn-cache
         with:
-          ref: ${{ github.base_ref }}
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
+      - name: Restore shared yarn cache
+        if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/restore@v3
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-shared
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Build
@@ -60,12 +80,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.base_re }}
+          ref: ${{ github.base_ref }}
+      - name: Restore pr yarn cache
+        uses: actions/cache@v3
+        id: restore-yarn-cache
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
+      - name: Restore shared yarn cache
+        if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
+        uses: actions/cache/restore@v3
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-shared
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Calculation
