--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -21,7 +21,7 @@ jobs:
         if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
         uses: actions/cache/restore@v3
         with:
-          path: ~/.yarn/cache
+          path: .yarn/cache
           key: ${{ runner.os }}-yarn-shared
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v3
         id: restore-yarn-cache
         with:
-          path: ~/.yarn/cache
+          path: .yarn/cache
           key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
       - name: Restore shared yarn cache
         if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
@@ -85,7 +85,7 @@ jobs:
         uses: actions/cache@v3
         id: restore-yarn-cache
         with:
-          path: ~/.yarn/cache
+          path: .yarn/cache
           key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
       - name: Restore shared yarn cache
         if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
