--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Restore yarn cache
         uses: actions/cache@v3
         with:
-          path: ~/.yarn/cache
+          path: .yarn/cache
           key: ${{ runner.os }}-yarn-shared
 
       - name: Install Dependencies
