--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,6 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Run Jest
-        run: yarn test
+        run: yarn test --verbose --coverage
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
