[ci] push jest can't use pr cache (#23)
* Split files

* Unable PR Cache

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,6 +1,8 @@
 name: test
 on:
-  pull_request
+  push:
+    branches:
+    - main
 
 jobs:
   jest:
@@ -11,14 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Restore pr yarn cache
-        uses: actions/cache@v3
-        id: restore-yarn-cache
-        with:
-          path: .yarn/cache
-          key: ${{ runner.os }}-yarn-pr-${{ github.event.number }}
       - name: Restore shared yarn cache
-        if: steps.restore-yarn-cache.outputs.cache-hit != 'true'
         uses: actions/cache/restore@v3
         with:
           path: .yarn/cache
