--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sugarform/core",
-  "version": "1.0.0-alpha.7",
+  "version": "1.0.0-beta.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
