--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src", "tests", "misc", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.cjs"],
+  "include": ["src", "tests", "misc", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.mjs"],
   "exclude": ["node_modules", "dist", "coverage"],
   "ts-node": {
     "compilerOptions": {
