--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
     "module": "ESNext",
     "outDir": "dist",
     "rootDir": "./",
+    "baseUrl": "./",
+    "paths": {
+      "@": ["src/"],
+      "@/*": ["src/*"],
+      "@component/*": ["src/component/*"],
+      "@util/*": ["src/util/*"],
+      "#/*": ["tests/*"]
+    },
 
     "jsx": "react",
     "sourceMap": true,
@@ -27,7 +35,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src", "tests", "misc", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.cjs"],
+  "include": ["src", "tests", "misc", ".eslintrc.cjs", "rollup.config.mjs", "jest.config.mjs"],
   "exclude": ["node_modules", "dist", "coverage"],
   "ts-node": {
     "compilerOptions": {
