--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,13 +32,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.18.0",
-    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-swc3": "^0.8.0",
-    "rollup-plugin-tsconfig-paths": "^1.5.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18.0.0",
@@ -62,5 +60,8 @@
   },
   "volta": {
     "node": "18.15.0"
+  },
+  "dependencies": {
+    "rollup-plugin-typescript-paths": "^1.4.0"
   }
 }
