--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "rollup": "^3.18.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-swc3": "^0.8.0",
+    "rollup-plugin-typescript-paths": "^1.4.0",
     "ts-jest": "^29.1.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
@@ -60,8 +61,5 @@
   },
   "volta": {
     "node": "18.15.0"
-  },
-  "dependencies": {
-    "rollup-plugin-typescript-paths": "^1.4.0"
   }
 }
