--- a/.github/workflows/core-bundle-size.yml
+++ b/.github/workflows/core-bundle-size.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Build
-        run: yarn build
+        run: yarn workspace @sugarform/core build
       - name: Export Size Info
         id: export
         run: |
@@ -60,7 +60,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
       - name: Build
-        run: yarn build
+        run: yarn workspace @sugarform/core build
       - name: Export Size Info
         id: export
         run: |
