--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,4 +1,4 @@
-name: test
+name: codecov
 on:
   push:
     branches:
@@ -24,7 +24,7 @@ jobs:
           node-version: 18
       - name: Install Dependencies
         run: yarn install --immutable
-      - name: Run Jest
-        run: yarn test --verbose --coverage
+      - name: Run Jest in @sugarform/core
+        run: yarn workspace @sugarform/core test --verbose --coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
