--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2015",
     "module": "ESNext",
 
+    "allowJs": true,
     "jsx": "react",
     "sourceMap": true,
     "declaration": true,
